Inca Plugin/src/main/gen/language/parser/FunIncAParser.java
// This is a generated file. Not intended for manual editing.
package language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static language.psi.FunIncATypes.*;
import static language.parser.FunIncAParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FunIncAParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Module(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ATOMIC_EXP, BASE_APPLY_EXP, BASE_APPLY_INFIX_EXP, BASE_APPLY_METHOD_EXP,
      BASE_APPLY_UNARY_EXP, CALL_EXP, CAST_EXP, CONST_SET_EXP,
      EXP, FOLD_EXP, IF_EXP, INFIX_EXP,
      LAMBDA_EXP, LET_EXP, LITERAL_EXP, MATCH_EXP,
      PARENTHESIS_EXP, SET_COMPREHENSION_EXP, SET_MEMBER_EXP, SUBINFIX_EXP,
      TUPLE_EXP, VAR_REF_EXP),
  };

  /* ********************************************************** */
  // '@main'
  public static boolean Annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Annotation")) return false;
    if (!nextTokenIs(b, ANNOTATION_MAIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANNOTATION_MAIN);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  /* ********************************************************** */
  // ParenthesisExp | SetComprehensionExp | ConstSetExp | TupleExp | FoldExp
  //                | BaseApplyExp | LiteralExp | VarRefExp | BaseApplyUnaryExp
  public static boolean AtomicExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomicExp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ATOMIC_EXP, "<atomic exp>");
    r = ParenthesisExp(b, l + 1);
    if (!r) r = SetComprehensionExp(b, l + 1);
    if (!r) r = ConstSetExp(b, l + 1);
    if (!r) r = TupleExp(b, l + 1);
    if (!r) r = FoldExp(b, l + 1);
    if (!r) r = BaseApplyExp(b, l + 1);
    if (!r) r = LiteralExp(b, l + 1);
    if (!r) r = VarRefExp(b, l + 1);
    if (!r) r = BaseApplyUnaryExp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TupleType | 'Any' | 'Nothing' | 'Unit' | PrimitiveType | SetType | ConstructorType | ScalaType | TypeNameRef
  public static boolean AtomicType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AtomicType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMIC_TYPE, "<atomic type>");
    r = TupleType(b, l + 1);
    if (!r) r = consumeToken(b, TYPE_ANY);
    if (!r) r = consumeToken(b, TYPE_NOTHING);
    if (!r) r = consumeToken(b, TYPE_UNIT);
    if (!r) r = PrimitiveType(b, l + 1);
    if (!r) r = SetType(b, l + 1);
    if (!r) r = ConstructorType(b, l + 1);
    if (!r) r = ScalaType(b, l + 1);
    if (!r) r = TypeNameRef(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // scalaterm '(' (Exp (',' Exp)*)? ')'
  public static boolean BaseApplyExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyExp")) return false;
    if (!nextTokenIs(b, SCALATERM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SCALATERM, PARENS_OPEN);
    r = r && BaseApplyExp_2(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, BASE_APPLY_EXP, r);
    return r;
  }

  // (Exp (',' Exp)*)?
  private static boolean BaseApplyExp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyExp_2")) return false;
    BaseApplyExp_2_0(b, l + 1);
    return true;
  }

  // Exp (',' Exp)*
  private static boolean BaseApplyExp_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyExp_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Exp(b, l + 1);
    r = r && BaseApplyExp_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' Exp)*
  private static boolean BaseApplyExp_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyExp_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!BaseApplyExp_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BaseApplyExp_2_0_1", c)) break;
    }
    return true;
  }

  // ',' Exp
  private static boolean BaseApplyExp_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyExp_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SubinfixExp BinaryOp InfixExp
  public static boolean BaseApplyInfixExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyInfixExp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BASE_APPLY_INFIX_EXP, "<base apply infix exp>");
    r = SubinfixExp(b, l + 1);
    r = r && BinaryOp(b, l + 1);
    p = r; // pin = BinaryOp
    r = r && InfixExp(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // SubinfixExp '.' scalaterm ( '(' (InfixExp (',' InfixExp)*)? ')' )?
  public static boolean BaseApplyMethodExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BASE_APPLY_METHOD_EXP, "<base apply method exp>");
    r = SubinfixExp(b, l + 1);
    r = r && consumeTokens(b, 2, DOT, SCALATERM);
    p = r; // pin = 3
    r = r && BaseApplyMethodExp_3(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ( '(' (InfixExp (',' InfixExp)*)? ')' )?
  private static boolean BaseApplyMethodExp_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3")) return false;
    BaseApplyMethodExp_3_0(b, l + 1);
    return true;
  }

  // '(' (InfixExp (',' InfixExp)*)? ')'
  private static boolean BaseApplyMethodExp_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENS_OPEN);
    r = r && BaseApplyMethodExp_3_0_1(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (InfixExp (',' InfixExp)*)?
  private static boolean BaseApplyMethodExp_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3_0_1")) return false;
    BaseApplyMethodExp_3_0_1_0(b, l + 1);
    return true;
  }

  // InfixExp (',' InfixExp)*
  private static boolean BaseApplyMethodExp_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = InfixExp(b, l + 1);
    r = r && BaseApplyMethodExp_3_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' InfixExp)*
  private static boolean BaseApplyMethodExp_3_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3_0_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!BaseApplyMethodExp_3_0_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BaseApplyMethodExp_3_0_1_0_1", c)) break;
    }
    return true;
  }

  // ',' InfixExp
  private static boolean BaseApplyMethodExp_3_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyMethodExp_3_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && InfixExp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // UnaryOp InfixExp
  public static boolean BaseApplyUnaryExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseApplyUnaryExp")) return false;
    if (!nextTokenIs(b, "<base apply unary exp>", MINUS, NEGATION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BASE_APPLY_UNARY_EXP, "<base apply unary exp>");
    r = UnaryOp(b, l + 1);
    p = r; // pin = 1
    r = r && InfixExp(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '+' | '-' | '*' | '/' | '%' // arithmetic
  //         | '&&' | '||' | '<' | '>' | '==' | '!=' | '<=' | '>=' // logic
  //         | '++' | '&'
  public static boolean BinaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, STAR);
    if (!r) r = consumeToken(b, SLASH);
    if (!r) r = consumeToken(b, MODULO);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, EQUIVALENCE);
    if (!r) r = consumeToken(b, NON_EQUIVALENCE);
    if (!r) r = consumeToken(b, LEQ);
    if (!r) r = consumeToken(b, GEQ);
    if (!r) r = consumeToken(b, SET_UNION);
    if (!r) r = consumeToken(b, SET_INTERSECTION);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean BooleanLit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BooleanLit")) return false;
    if (!nextTokenIs(b, "<boolean lit>", BOOLEAN_FALSE, BOOLEAN_TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LIT, "<boolean lit>");
    r = consumeToken(b, BOOLEAN_TRUE);
    if (!r) r = consumeToken(b, BOOLEAN_FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AtomicExp ('[' TypeList ']')? ('(' CallExpList ')')+
  public static boolean CallExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXP, "<call exp>");
    r = AtomicExp(b, l + 1);
    r = r && CallExp_1(b, l + 1);
    r = r && CallExp_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('[' TypeList ']')?
  private static boolean CallExp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExp_1")) return false;
    CallExp_1_0(b, l + 1);
    return true;
  }

  // '[' TypeList ']'
  private static boolean CallExp_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExp_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SQUARE_BRACKET_OPEN);
    r = r && TypeList(b, l + 1);
    r = r && consumeToken(b, SQUARE_BRACKET_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('(' CallExpList ')')+
  private static boolean CallExp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExp_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CallExp_2_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!CallExp_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CallExp_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' CallExpList ')'
  private static boolean CallExp_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExp_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENS_OPEN);
    r = r && CallExpList(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (Exp (',' Exp)*)?
  public static boolean CallExpList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpList")) return false;
    Marker m = enter_section_(b, l, _NONE_, CALL_EXP_LIST, "<call exp list>");
    CallExpList_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // Exp (',' Exp)*
  private static boolean CallExpList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpList_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Exp(b, l + 1);
    r = r && CallExpList_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' Exp)*
  private static boolean CallExpList_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpList_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CallExpList_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CallExpList_0_1", c)) break;
    }
    return true;
  }

  // ',' Exp
  private static boolean CallExpList_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallExpList_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SubinfixExp '.' 'as' '[' TypeNameRef ']'
  public static boolean CastExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExp")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CAST_EXP, "<cast exp>");
    r = SubinfixExp(b, l + 1);
    r = r && consumeTokens(b, 2, DOT, CAST, SQUARE_BRACKET_OPEN);
    p = r; // pin = 3
    r = r && report_error_(b, TypeNameRef(b, l + 1));
    r = p && consumeToken(b, SQUARE_BRACKET_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '{' (Exp (',' Exp)*)? '}'
  public static boolean ConstSetExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstSetExp")) return false;
    if (!nextTokenIs(b, BRACES_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACES_OPEN);
    r = r && ConstSetExp_1(b, l + 1);
    r = r && consumeToken(b, BRACES_CLOSE);
    exit_section_(b, m, CONST_SET_EXP, r);
    return r;
  }

  // (Exp (',' Exp)*)?
  private static boolean ConstSetExp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstSetExp_1")) return false;
    ConstSetExp_1_0(b, l + 1);
    return true;
  }

  // Exp (',' Exp)*
  private static boolean ConstSetExp_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstSetExp_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Exp(b, l + 1);
    r = r && ConstSetExp_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' Exp)*
  private static boolean ConstSetExp_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstSetExp_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConstSetExp_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstSetExp_1_0_1", c)) break;
    }
    return true;
  }

  // ',' Exp
  private static boolean ConstSetExp_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstSetExp_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ConstructorRef TypeVarDefList? '(' (PatternVarDef (',' PatternVarDef)*)? ')'
  public static boolean ConstructorPat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstructorRef(b, l + 1);
    r = r && ConstructorPat_1(b, l + 1);
    r = r && consumeToken(b, PARENS_OPEN);
    r = r && ConstructorPat_3(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, CONSTRUCTOR_PAT, r);
    return r;
  }

  // TypeVarDefList?
  private static boolean ConstructorPat_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat_1")) return false;
    TypeVarDefList(b, l + 1);
    return true;
  }

  // (PatternVarDef (',' PatternVarDef)*)?
  private static boolean ConstructorPat_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat_3")) return false;
    ConstructorPat_3_0(b, l + 1);
    return true;
  }

  // PatternVarDef (',' PatternVarDef)*
  private static boolean ConstructorPat_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = PatternVarDef(b, l + 1);
    r = r && ConstructorPat_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' PatternVarDef)*
  private static boolean ConstructorPat_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConstructorPat_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstructorPat_3_0_1", c)) break;
    }
    return true;
  }

  // ',' PatternVarDef
  private static boolean ConstructorPat_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorPat_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && PatternVarDef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id
  public static boolean ConstructorRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorRef")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, CONSTRUCTOR_REF, r);
    return r;
  }

  /* ********************************************************** */
  // TypeNameRef '[' TypeList ']'
  public static boolean ConstructorType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructorType")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = TypeNameRef(b, l + 1);
    r = r && consumeToken(b, SQUARE_BRACKET_OPEN);
    r = r && TypeList(b, l + 1);
    r = r && consumeToken(b, SQUARE_BRACKET_CLOSE);
    exit_section_(b, m, CONSTRUCTOR_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // id '(' (Type (',' Type)*)? ')'
  public static boolean DataConstructorDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataConstructorDef")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, PARENS_OPEN);
    r = r && DataConstructorDef_2(b, l + 1);
    r = r && consumeToken(b, PARENS_CLOSE);
    exit_section_(b, m, DATA_CONSTRUCTOR_DEF, r);
    return r;
  }

  // (Type (',' Type)*)?
  private static boolean DataConstructorDef_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataConstructorDef_2")) return false;
    DataConstructorDef_2_0(b, l + 1);
    return true;
  }

  // Type (',' Type)*
  private static boolean DataConstructorDef_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataConstructorDef_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Type(b, l + 1);
    r = r && DataConstructorDef_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' Type)*
  private static boolean DataConstructorDef_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataConstructorDef_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!DataConstructorDef_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DataConstructorDef_2_0_1", c)) break;
    }
    return true;
  }

  // ',' Type
  private static boolean DataConstructorDef_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataConstructorDef_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Annotation* Visibility? 'data' id TypeVarDefList? '=' DataConstructorDef ('|' DataConstructorDef)*
  public static boolean DataDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataDef")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATA_DEF, "<data def>");
    r = DataDef_0(b, l + 1);
    r = r && DataDef_1(b, l + 1);
    r = r && consumeTokens(b, 1, KEYWORD_DATA, ID);
    p = r; // pin = 3
    r = r && report_error_(b, DataDef_4(b, l + 1));
    r = p && report_error_(b, consumeToken(b, EQUAL_SIGN)) && r;
    r = p && report_error_(b, DataConstructorDef(b, l + 1)) && r;
    r = p && DataDef_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Annotation*
  private static boolean DataDef_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataDef_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DataDef_0", c)) break;
    }
    return true;
  }
